<resources>
    <string name="app_name">Navigation Drawer App</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_center">Help Center</string>
    <string name="language">Language</string>
    <string name="folders">Folders</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="notification_and_sounds">Notification and Sounds</string>
    <string name="edit_profile">Edit profile</string>
    <string name="confirmation_logout">Are you sure you want to exit this application?</string>
</resources>