<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SettingsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_circle"
                android:drawableTint="#FFEBB4"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="left|center"
                android:backgroundTint="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_notifications"
                android:drawableTint="#DF2E38"
                android:text="@string/notification_and_sounds"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="left|center"
                android:backgroundTint="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_circle"
                android:drawableTint="#5D9C59"
                android:text="@string/privacy_and_security"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="left|center"
                android:backgroundTint="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_folder"
                android:drawableTint="#655DBB"
                android:text="@string/folders"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="left|center"
                android:backgroundTint="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_language"
                android:drawableTint="#97DEFF"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="left|center"
                android:backgroundTint="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_help_center"
                android:drawableTint="#408E91"
                android:text="@string/help_center"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="left|center"
                android:backgroundTint="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>